crates/edifact-rs-derive/tests/ui/fail_enum.stderr
error: EdifactSerialize/EdifactDeserialize only support structs
  --> tests/ui/fail_enum.rs:15:1
   |
15 | enum Message {
   | ^^^^
